<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menuSearch"
        android:title="@string/search"
        android:icon="@drawable/ic_baseline_search_24"
        app:showAsAction="ifRoom"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        />
    <item android:id="@+id/allNews"
        android:title="All NEWS"/>
    <item
        android:id="@+id/sport"
        android:title="@string/sport" />
    <item
        android:id="@+id/business"
        android:title="@string/business" />
    <item
        android:id="@+id/technology"
        android:title="@string/technology" />
    <item
        android:id="@+id/autoMobile"
        android:title="@string/automobile" />
</menu>